--- a/app/src/main/res/layout/activity_confirm__appoinment_.xml
+++ b/app/src/main/res/layout/activity_confirm__appoinment_.xml
@@ -23,17 +23,17 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/etxtid"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
                         android:background="@drawable/border"
                         android:gravity="center"
                         android:inputType="text"
-                        android:padding="16dp"
+                        android:padding="10dp"
                         android:text="Id"
                         android:textColor="@color/textcolor"
                         android:textSize="16dp" />
@@ -42,17 +42,17 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_margin="10dp"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/etxtstatus"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
                         android:background="@drawable/border"
                         android:gravity="center"
                         android:inputType="text"
-                        android:padding="16dp"
+                        android:padding="10dp"
                         android:text="Panding"
                         android:textColor="@color/textcolor"
                         android:textSize="16dp" />
@@ -61,18 +61,18 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/etxtmothercell"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
                         android:background="@drawable/border"
                         android:gravity="center"
                         android:hint="Mother Cell"
                         android:inputType="text"
-                        android:padding="16dp"
+                        android:padding="10dp"
                         android:textColor="@color/textcolor"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -91,7 +91,7 @@
                         android:gravity="center"
                         android:hint="Appointment date"
                         android:inputType="text"
-                        android:padding="16dp"
+                        android:padding="10dp"
                         android:textColor="@color/textcolor"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -99,47 +99,145 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
                     android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:text="Problem Descripton:" />
 
                     <TextView
                         android:id="@+id/etxtdescription"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
                         android:background="@drawable/border"
                         android:gravity="center"
                         android:hint="Description"
                         android:inputType="text"
-                        android:padding="16dp"
+                        android:padding="10dp"
                         android:textColor="@color/textcolor"
                         android:textSize="16dp" />
+
+                </LinearLayout>
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="Appointment Type:" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/border"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/txt_chamber_type"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:gravity="center"
+                        android:text="null"
+                        android:textSize="18sp" />
+
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/border"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="right"
+                        android:text="bkash Number:"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/txt_bkash_number"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="01**********"
+                        android:textSize="18sp" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/border"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="200dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="right"
+                        android:text="Bkash Amount TK:"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/txt_bkash_amount"
+                        android:layout_width="160dp"
+                        android:layout_height="match_parent"
+                        android:text="200"
+                        android:textSize="18sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/border"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="right"
+                        android:text="bKash Trans ID:"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/txt_bkash_trans_id"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:text="JLS44JDKFSG"
+                        android:textSize="18sp" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/textView17"
                         android:layout_width="match_parent"
                         android:layout_height="20dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
                         android:gravity="bottom"
                         android:text="Input Zoom link or Chamber Address:"
                         android:textColor="@android:color/holo_red_light"
                         android:textSize="18sp" />
 
                     <EditText
-                        android:id="@+id/editTextTextMultiLine"
+                        android:id="@+id/zoom_or_chamber_address"
                         android:layout_width="match_parent"
                         android:layout_height="70dp"
-                        android:layout_margin="10dp"
                         android:background="@drawable/border"
                         android:ems="10"
                         android:gravity="start|top"
                         android:inputType="textMultiLine" />
+
                 </LinearLayout>
 
                 <Button
