--- a/app/src/main/res/layout/activity_mother_appoinment_history.xml
+++ b/app/src/main/res/layout/activity_mother_appoinment_history.xml
@@ -11,32 +11,32 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal">-->
 
-            <EditText
-                android:id="@+id/etxt_search"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="Search here"
-                android:inputType="textPersonName" />
+<!--            <EditText-->
+<!--                android:id="@+id/etxt_search"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_margin="10dp"-->
+<!--                android:layout_weight="1"-->
+<!--                android:ems="10"-->
+<!--                android:hint="Search here"-->
+<!--                android:inputType="textPersonName" />-->
 
-            <Button
-                android:id="@+id/btnSearch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:background="@color/button"
-                android:text="Search"
-                android:textColor="#fff"
-                android:textStyle="bold" />
-        </LinearLayout>
+<!--            <Button-->
+<!--                android:id="@+id/btnSearch"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_margin="5dp"-->
+<!--                android:layout_weight="1"-->
+<!--                android:background="@color/button"-->
+<!--                android:text="Search"-->
+<!--                android:textColor="#fff"-->
+<!--                android:textStyle="bold" />-->
+<!--        </LinearLayout>-->
 
         <LinearLayout
             android:layout_width="match_parent"
