--- a/app/src/main/res/layout/activity_confirm__appoinment_.xml
+++ b/app/src/main/res/layout/activity_confirm__appoinment_.xml
@@ -66,6 +66,12 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/textView21"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Mother Number:" />
+
+                    <TextView
                         android:id="@+id/etxtmothercell"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -81,13 +87,19 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="10dp"
                     android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textView26"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Appointment Date:" />
 
                     <TextView
                         android:id="@+id/etxtdate"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
                         android:background="@drawable/border"
                         android:gravity="center"
                         android:hint="Appointment date"
@@ -106,7 +118,6 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
                         android:text="Problem Descripton:" />
 
                     <TextView
@@ -157,7 +168,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="200dp"
+                        android:layout_width="175dp"
                         android:layout_height="wrap_content"
                         android:gravity="right"
                         android:text="bkash Number:"
@@ -202,7 +213,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="200dp"
+                        android:layout_width="175dp"
                         android:layout_height="wrap_content"
                         android:gravity="right"
                         android:text="bKash Trans ID:"
