--- a/app/src/main/res/layout/activity_doctor_appoinment_history.xml
+++ b/app/src/main/res/layout/activity_doctor_appoinment_history.xml
@@ -47,7 +47,8 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/doctor_appoinment_recycleview"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:background="@color/background" />
 
 
 
