--- a/app/src/main/res/layout/activity_mother__appointment__details_ctivity.xml
+++ b/app/src/main/res/layout/activity_mother__appointment__details_ctivity.xml
@@ -25,7 +25,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/etxtid"
+                        android:id="@+id/etxt_id"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/border"
@@ -74,7 +74,7 @@
                         android:text="Appointment Date:" />
 
                     <TextView
-                        android:id="@+id/etxtdate"
+                        android:id="@+id/etxt_mother_date"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/border"
@@ -98,7 +98,7 @@
                         android:text="Problem Descripton:" />
 
                     <TextView
-                        android:id="@+id/etxtdescription"
+                        android:id="@+id/etxt_mother_description"
                         android:layout_width="match_parent"
                         android:layout_height="70dp"
                         android:background="@drawable/border"
@@ -212,18 +212,19 @@
                         android:layout_width="match_parent"
                         android:layout_height="20dp"
                         android:gravity="bottom"
-                        android:text="Input Zoom link or Chamber Address:"
+                        android:text="Zoom link /Chamber Address:"
                         android:textColor="@android:color/holo_red_light"
                         android:textSize="18sp" />
 
-                    <EditText
+                    <TextView
                         android:id="@+id/zoom_or_chamber_address"
                         android:layout_width="match_parent"
                         android:layout_height="70dp"
                         android:background="@drawable/border"
                         android:ems="10"
-                        android:gravity="start|top"
-                        android:inputType="textMultiLine" />
+                        android:gravity="center"
+                        android:inputType="textMultiLine"
+                        android:padding="5dp" />
 
                 </LinearLayout>
 
