--- a/app/src/main/res/layout/activity_mother__appointment__details_ctivity.xml
+++ b/app/src/main/res/layout/activity_mother__appointment__details_ctivity.xml
@@ -216,7 +216,7 @@
                         android:textColor="@android:color/holo_red_light"
                         android:textSize="18sp" />
 
-                    <TextView
+                    <EditText
                         android:id="@+id/zoom_or_chamber_address"
                         android:layout_width="match_parent"
                         android:layout_height="70dp"
