--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -165,7 +165,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/mother_update"
+                    android:id="@+id/signup"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
 
